fix add align-items: flex-star

--- a/public/css/template-3.css
+++ b/public/css/template-3.css
@@ -103,6 +103,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: var(--space-l);
+  align-items: flex-start;
 }
 
 .hero__title {
@@ -145,6 +146,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: var(--space-l);
+  align-items: flex-start;
 }
 
 .card__img {
